view height calc issue getting cut off from footer fixed!

--- a/src/components/Bio/Bio.module.scss
+++ b/src/components/Bio/Bio.module.scss
@@ -4,7 +4,7 @@ article,
 .bioContainerActive {
   position: absolute;
   width: 100%;
-  height: calc(100vh - 5rem);
+  height: calc(100vh - 9.8rem);
   top: 5.8rem;
   padding: 5rem 10rem 0;
   display: grid;
